<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barrel Race</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Clear">Clear</string>
    <string name="name">Enter Your Name Here</string>
    <string name="highscore">High Score Chart</string>
    <string name="newgame">START</string>
    <string name="time">"Time : "</string>
    <string name="realtime">00:00:00</string>
    <string name="yourscore">"Your Score : "</string>
    <string name="highscores">High Scores</string>
    <string name="blankspace">" "</string>
    <string name="back">Back</string>

</resources>
